fixing spacing

--- a/src/products.css
+++ b/src/products.css
@@ -18,6 +18,7 @@ h2 {
     flex-wrap: wrap;
     padding-top: 1%;
     justify-content: center;
+    padding-bottom: 7%;
 }
 
 #books li {
